# Trane

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.md  LICENSE  Makefile  README.md  Tutorial.ipynb  Untitled.ipynb  build-doc.sh  contributing.md  generate_labels.py  generate_tasks.py  pred_probl.json  prediction_problems.json  pyproject.toml  release.md  requirements.txt  requirements_dev.txt  requirements_test.txt  run.sh  setup.cfg  setup.py  test.py  tox.ini  util.py  workflow-test.ipynb
.circleci/: config.yml  config_py_2.yml
.github/workflows/: check_changelog.yaml  clean_cache.yaml  clean_cache.yml  dependency_checker.yaml  install.yaml  latest_dependency_checker.yaml  lint_check.yaml  release.yaml  test_without_dev_deps.yaml  tests.yaml  unit_tests.yaml
Architecture Work/: PredictionProblemGenerator.py  architecture_outline.py  inheritance_test.py
Example/: Example.ipynb  chicago_example.ipynb  covid.ipynb  covid_example.ipynb  meta.json  meta_covid.json  try.ipynb  youtube_example.ipynb
Example/chicago-bike/: chicago-bike.ipynb  chicago-bike.py  prob_with_acc.json
Example/youtube/: trane-youtube.ipynb  visualize.ipynb
Examples/: chicago_example.ipynb  covid_example.ipynb  index.md  youtube_example.ipynb
Examples/chicago-bike/: chicago-bike.ipynb  chicago-bike.py  prob_with_acc.json
Examples/covid/: covid19.csv
Examples/flight-delay/: flight-delay-trane.ipynb  flight-delay-trane.py  visualize.ipynb
Examples/youtube/: trane-youtube.ipynb  trane-youtube.py  visualize.ipynb
Implementation Code/: Agg_op_module.py  AggregationOperation.py  AggregationOperationModule.py  CSVs_to_DF.py  ColumnOperation.py  Execute.py  Filter.py  FilterOperation.py  FilterOperationModule.py  MultiRowOperation.py  PredictionProblem.py  PredictionProblemGenerator.py  RowOperation.py  RowOperationModule.py  SubOperation.py  TransformationOperation.py  TransformationOperationModule.py
Implementation Code/Operations/: AggregationOperation.py  FilterOperation.py
Implementation Code/misc/: pandas_test.py
Test Datasets/: merged_df.csv  synthetic_taxi_data.csv
Three Datasets/: Three Datasets.ipynb
Three Datasets/Github/: convert.py
Three Datasets/Yelp Reviews/: util.py
Trane/: AggregationOperation.py  AggregationOperationModule.py  CSVs_to_DF.py  DataParser.py  Execute.py  FilterOperation.py  FilterOperationModule.py  LabelGenerator.py  PredictionProblem.py  PredictionProblemGenerator.py  RowOperation.py  RowOperationModule.py  SubOperation.py  TableMeta.py  TransformationOperation.py  TransformationOperationModule.py
Trane Implementation Code/: Operation.py  RowOperation.py
Trane Test Datasets/csv's/: csv_df_test_1.csv  csv_df_test_2.csv
Trane/core/: LabelGenerator.py  PredictionProblemGenerator.py
Trane/misc/: generate_taxi_data.py  pandas_test.py
Trane/ops/: AggregationOperation.py  AggregationOperationModule.py  FilterOperation.py  FilterOperationModule.py  Operation.py  RowOperation.py  RowOperationModule.py  TransformationOperationModule.py
Trane/utils/: CSVs_to_DF.py  DataParser.py  TableMeta.py
docs/: Chicago Bike Example - Detailed Walkthrough.ipynb  Covid Example - Detailed Walkthrough.ipynb  Makefile  Quickstart - Covid Example.ipynb  Yelp - End to End.ipynb  changelog.md  changelog.rst  conf.py  index.md  index.rst  installation.md  installation.rst  make.bat  trane.rst  trane.utils.rst  usage.rst
docs/Examples/: chicago_example.ipynb  covid_example.ipynb  youtube_example.ipynb
docs/_modules/: modules.rst  trane.core.rst  trane.ops.rst  trane.rst  trane.utils.rst
docs/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  trane.core.html  trane.html  trane.ops.html  trane.utils.html
examples/: donations.conf  synthetic_taxi.conf
flight-delay/: flight-delay-trane.ipynb  flight-delay-trane.py  visualize.ipynb
flight-delay/flight-delays/: create meta.ipynb  meta.csv  meta.json  proc-data.ipynb
misc/: generate_table_meta.py  generate_taxi_data.py  generate_taxi_meta.py
scripts/: create_minimal_requirements.py  walmart.py  yelp.py
scripts.py/: create_minimal_requirements.py
taxi_data/: taxi_meta.json
tests/: conftest.py  latest_requirements.txt  minimal_requirements.txt  test_calculate_target_values.py  test_check_operations.py  test_column_schema.py  test_data_parser.py  test_datasets.py  test_denormalize.py  test_denormalize_dataframes.py  test_denormalize_metadata_only.py  test_featuretools_wrapper.py  test_inference.py  test_llm.py  test_load_functions.py  test_logical_types.py  test_metadata.py  test_prediction_problem.py  test_problem_generator.py  test_table_meta.py  test_target_values.py  test_typing_utils.py  test_utils.py  test_version.py
tests/core/: test_conductor.py  test_cutoff_strategy.py  test_labeler.py  test_prediction_problem.py  test_prediction_problem_generator.py  test_prediction_problem_saver.py
tests/integration_tests/: meta_youtube.json  test_covid.py  test_examples.py  test_youtube.py  utils.py
tests/ops/: test_aggregation_ops.py  test_filter_ops.py  test_op_base.py  test_op_saver.py  test_op_utils.py  test_row_ops.py  test_threshold_functions.py  test_transformation_ops.py
tests/typing/: test_column_schema.py  test_inference.py  test_logical_types.py  test_ml_types.py
tests/utils/: test_cutoff_strategy.py  test_data_parser.py  test_generate_cutoff_times.py  test_table_meta.py
trane/: __init__.py  column_schema.py  llm.py  logical_types.py
trane-examples/chicago-bike/: chicago-bike.ipynb  chicago-bike.py
trane-examples/flight-delay/: flight-delay-trane.ipynb  flight-delay-trane.py  visualize.ipynb
trane-examples/flight-delay2/: flight-delay-trane.ipynb  flight-delay-trane.py
trane-examples/taxi_data/: synthetic_taxi_data.csv
trane-examples/youtube/: meta.json  trane-youtube.py
trane/core/: __init__.py  conductor.py  cutoff_strategy.py  label_generator.py  labeler.py  prediction_problem.py  prediction_problem_saver.py  (+5 more)
trane2/: __init__.py
unpacked_sdist/: PKG-INFO  README.md
(+137 files in other folders)
