[project]
name = "trane"
readme = "README.md"
description = "automatically generate prediction problems and labels for supervised learning."
dynamic = ["version"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
]
authors = [
    {name="MIT Data to AI Lab", email="dai-lab-trane@mit.edu"}
]
maintainers = [
    {name="MIT Data to AI Lab", email="dai-lab-trane@mit.edu"}
]
keywords = ["trane", "data science", "machine learning"]
license = {text = "MIT License"}
requires-python = ">=3.8,<4"
dependencies = [
    "numpy >= 1.13.0",
    "pandas >= 0.21.0",
    "scipy >= 1.0.0",
    "composeml >= 0.10.1",
    "scikit-learn >= 1.3.0",
    "tqdm >= 4.65.0",
    "featuretools >= 1.0.0",
    "ipywidgets >= 8.0.0",
]

[project.urls]
"Source Code"= "https://github.com/trane-dev/Trane/"
"Changes" = "https://github.com/trane-dev/Trane/blob/main/docs/changelog.md"
"Issue Tracker" = "https://github.com/trane-dev/Trane/issues"
"Twitter" = "https://twitter.com/lab_dai"
"Chat" = "https://join.slack.com/t/trane-dev/shared_invite/zt-1zglnh25c-ryuQFarw0rVgKHC6ywUOlg"

[project.optional-dependencies]
test = [
    "pytest >= 3.4.2",
    "pytest-cov >= 2.5.1",
    "pytest-xdist >= 3.1.0",
    "pytest-runner >= 2.11.1",
]
dev = [
    "ruff >= 0.0.260" ,
    "black[jupyter] >= 22.12.0",
    "pre-commit == 2.20.0",
]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"*" = [
    "*.txt",
    "*.csv",
    "README.md",
    "Makefile",
]
"trane" = [
    "datasets/data/covid19.csv",
    "datasets/data/USvideos.csv",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "* __pycache__",
    "*.py[co]",
]

[tool.setuptools.dynamic]
version = {attr = "trane.version.__version__"}

[tool.pytest.ini_options]
testpaths = [
    "trane/tests/*"
]

[tool.coverage.run]
source = ["trane"]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if self._verbose:",
    "if verbose:",
    "if profile:",
    "pytest.skip"
]

[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
# Never enforce `E501` (line length violations)
line-length = 88
ignore = ["E501"]
exclude = [
    "Examples",
]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # flake8-quotes
    "Q",
    # isort
    "I001"
]
src = ["trane"]

[tool.ruff.isort]
known-first-party = ["trane"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402", "F403", "F405", "E501", "I001"]
