[project]
name = "trane"
readme = "README.md"
description = "automatically generate prediction problems and labels for supervised learning."
dynamic = ["version"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
]
authors = [
    {name="MIT Data to AI Lab", email="dai-lab-trane@mit.edu"}
]
maintainers = [
    {name="MIT Data to AI Lab", email="dai-lab-trane@mit.edu"}
]
keywords = ["trane", "data science", "machine learning"]
license = {text = "MIT License"}
requires-python = ">=3.8,<4"
dependencies = [
    "numpy >= 1.24.2",
    "pandas >= 2.0.1",
    "scipy >= 1.10.0",
    "tqdm >= 4.65.0",
    "importlib_resources >= 6.0.0",
    "pyarrow >= 14.0.1",
    "humanize >= 4.9.0"
]

[project.urls]
"Source Code"= "https://github.com/trane-dev/Trane/"
"Changes" = "https://github.com/trane-dev/Trane/blob/main/docs/changelog.md"
"Issue Tracker" = "https://github.com/trane-dev/Trane/issues"
"Twitter" = "https://twitter.com/lab_dai"
"Chat" = "https://join.slack.com/t/trane-dev/shared_invite/zt-1zglnh25c-ryuQFarw0rVgKHC6ywUOlg"

[project.optional-dependencies]
test = [
    "pytest >= 3.4.2",
    "pytest-cov >= 2.5.1",
    "pytest-xdist >= 3.1.0",
    "pytest-runner >= 2.11.1",
]
dev = [
    "ruff >= 0.1.8" ,
    "pre-commit >= 3.6.0",
]
llm = [
    "openai >= 1.3.7",
    "anthropic >= 0.7.7",
    "tiktoken >= 0.5.1",
]

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE", "trane/datasets/data/store/LICENSE"]

[tool.setuptools.packages.find]
namespaces = true

[tool.setuptools.package-data]
"*" = [
    "*.txt",
    "*.csv",
    "README.md",
    "Makefile",
]
"trane" = [
    "trane/datasets/data/airbnb_reviews/airbnb_reviews.csv",
    "trane/datasets/data/store/categories.csv",
    "trane/datasets/data/store/cust_hist.csv",
    "trane/datasets/data/store/customers.csv",
    "trane/datasets/data/store/inventory.csv",
    "trane/datasets/data/store/orderlines.csv",
    "trane/datasets/data/store/orders.csv",
    "trane/datasets/data/store/products.csv",
    "trane/datasets/data/store/reorder.csv",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "* __pycache__",
    "*.py[co]",
]

[tool.setuptools.dynamic]
version = {attr = "trane.version.__version__"}

[tool.pytest.ini_options]
testpaths = [
    "trane/tests/*"
]

[tool.coverage.run]
source = ["trane"]

[tool.coverage.report]
exclude_lines =[
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if self._verbose:",
    "if verbose:",
    "if profile:",
    "pytest.skip"
]

[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
preview = true
line-length = 88
ignore = ["E501"]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # flake8-quotes
    "Q",
    # isort
    "I001"
]
src = ["trane"]
target-version = "py312"

[tool.ruff.isort]
known-first-party = ["trane"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402", "F403", "F405", "E501", "I001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
preview = true
